ADD handle error for not found slug in details page

--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -28,6 +28,7 @@
   --foreground: #171717;
 
   --main-color-theme: #5DC04F;
+  --error-color: #da2525;
 }
 
 /* @media (prefers-color-scheme: dark) {
